# dictee

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  DOC.md  ETAT_PROJET.md  PKGBUILD  PKGBUILD-cuda  PROMOTION.md  README.fr.md  README.md  build-common.sh  build-deb.sh  build-rpm.sh  build-tar.sh  build.sh  build_and_install.sh  continuation.conf.default  dictee  dictee-cheatsheet  dictee-common.sh  dictee-cuda.install  dictee-diarize-llm.py  dictee-models  dictee-postprocess.py  dictee-ptt.py  dictee-ptt.service  dictee-reset  dictee-setup.py  dictee-switch-backend  dictee-test-rules  dictee-transcribe.py  dictee-translate-langs  dictee-tray.py  dictee.conf.example  dictee.install  dictee.sh  dictee_models.py  dictionary.conf.default  install-online.sh  (+10 more)
docs/: analyse-murmure.md  architecture-pile.md  architecture-systeme.md  building.md  cli-programs.md  multi-arch-packaging.md  plasmoid.md  postprocess-dictionary.fr.md  postprocess-dictionary.md  postprocess-language-rules.fr.md  postprocess-language-rules.md  postprocess-regex-rules.fr.md  postprocess-regex-rules.md  qt-patterns.md  release-notes-v1.3.0.md  test-checklist-ui-pipeline.md  test-protocol-vocal.md
librivox/: BENCHMARK.md  bovary_ch01_reference.txt  bovary_ch01_whisper-large-v3.txt  bovary_ch01_whisper-medium.txt  bovary_ch01_whisper-small.txt  bovary_ch01_whisper-tiny.txt
plasmoid/: README.md  fr.po  gen-defaults.py  template.pot
po/: de.mo  de.po  dictee.pot  es.mo  es.po  es.po~  fr.mo  fr.po  fr.po~  it.mo  it.po  pt.mo  pt.po  uk.mo  uk.po  uk.po~
scripts/: generate-canary-tokenizer.py  install-fedora.sh
src/: canary.rs  decoder_canary.rs  execution.rs  lib.rs  model_canary.rs
tests/: dictee-stress-test-protocol.txt  dictee-stress-test.sh  test-apply-continuation.sh  test-pipeline.py  test-postprocess.py  test-translate.sh  test_pipeline_styles.py  voice-commands-input.txt  (+1 more)
(+149 files in other folders)
