[package]
name = "parakeet-rs"
version = "1.2.0"
edition = "2021"
authors = ["altunenes"]
description = "Fast ASR & Speaker Diarization with NVIDIA Parakeet via ONNX"
repository = "https://github.com/altunenes/parakeet-rs"
license = "GPL-3.0-or-later"
keywords = ["speech-recognition", "asr", "parakeet", "onnx", "nvidia"]
categories = ["multimedia::audio", "science"]

[lib]
name = "parakeet_rs"
path = "src/lib.rs"

[[example]]
name = "diarization"
path = "examples/diarization.rs"

[[example]]
name = "raw"
path = "examples/raw.rs"

[[example]]
name = "streaming"
path = "examples/streaming.rs"

[[bin]]
name = "transcribe"
path = "src/bin/transcribe.rs"

[[bin]]
name = "transcribe-daemon"
path = "src/bin/transcribe_daemon.rs"

[[bin]]
name = "transcribe-client"
path = "src/bin/transcribe_client.rs"

[[bin]]
name = "transcribe-diarize"
path = "src/bin/transcribe_diarize.rs"

[[bin]]
name = "transcribe-stream-diarize"
path = "src/bin/transcribe_stream_diarize.rs"

[[bin]]
name = "diarize-only"
path = "src/bin/diarize_only.rs"

[dependencies]
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray"] }
hound = "3.5"
eyre = "0.6"
ndarray = "0.17"
tokenizers = { version = "0.22.2", default-features = false, features = ["onig"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rustfft = "6.4"
ctrlc = "3.4"
libc = "0.2"

[dev-dependencies]

[features]
default = ["cpu", "ort-defaults"]
cpu = []
ort-defaults = ["ort/default"]
cuda = ["ort/cuda"]
tensorrt = ["ort/tensorrt"]
coreml = ["ort/coreml"]
directml = ["ort/directml"]
migraphx = ["ort/migraphx"]
openvino = ["ort/openvino"]
webgpu = ["ort/webgpu"]
nnapi = ["ort/nnapi"]
sortformer = []
load-dynamic = ["ort/load-dynamic"]
preload-dylibs = ["ort/preload-dylibs"]